--- a/main.html
+++ b/main.html
@@ -8,6 +8,26 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<nav>
+		<ul>
+			<li><a href="https://www.dictionary.com/browse/phrase">Noun Phrase</a></li>
+			<li><a href="https://www.dictionary.com/browse/phrase#other-words-from">Adjective Phrase</a></li>
+			<li><a href="https://www.dictionary.com/browse/phrase#example-sentences">Adverb Phrase</a></li>
+		</ul>
+	</nav>
+	<h1>3 random audios</h1>
+	
+<audio src="http://commondatastorage.googleapis.com/codeskulptor-demos/DDR_assets/Kangaroo_MusiQue_-_The_Neverwritten_Role_Playing_Game.mp3" controls>
+URL 1
+</audio>
+	
+<audio src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" controls>
+URL 2
+</audio>
+	
+<audio src="http://codeskulptor-demos.commondatastorage.googleapis.com/pang/paza-moduless.mp3" controls>
+URL 3
+</audio>
     <script type="text/javascript" src="./script.js">
 </script>
 
